--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/index.js",
-    "build": "webpack",
+    "build": "webpack --mode=production",
     "dev": "webpack-dev-server"
   },
   "author": "",
